[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-pairs-trading"
version = "0.1.0"
description = "RL pairs trading research code"
requires-python = ">=3.10"
dependencies = [
  "captum",
  "jupyter",
  "matplotlib",
  "numpy",
  "pandas",
  "scikit-fuzzy",
  "scikit-learn",
  "scipy",
  "seaborn",
  "statsmodels",
  "ta",
  "TA-Lib",
  "torch",
  "yfinance",
]

[project.scripts]
rl-pairs-train = "rl_pairs_trading.training:main"
rl-pairs-backtest = "rl_pairs_trading.backtest:main"
rl-pairs-pipeline = "rl_pairs_trading.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
